# restapi/operations/clusters/delete_responses.go
@@ -1,96 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package clusters
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/dgoodwin/syncsets/models"
-)
-
-// DeleteNoContentCode is the HTTP code returned for type DeleteNoContent
-const DeleteNoContentCode int = 204
-
-/*DeleteNoContent Deleted
-
-swagger:response deleteNoContent
-*/
-type DeleteNoContent struct {
-}
-
-// NewDeleteNoContent creates DeleteNoContent with default headers values
-func NewDeleteNoContent() *DeleteNoContent {
-
-	return &DeleteNoContent{}
-}
-
-// WriteResponse to the client
-func (o *DeleteNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(204)
-}
-
-/*DeleteDefault error
-
-swagger:response deleteDefault
-*/
-type DeleteDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewDeleteDefault creates DeleteDefault with default headers values
-func NewDeleteDefault(code int) *DeleteDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &DeleteDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the delete default response
-func (o *DeleteDefault) WithStatusCode(code int) *DeleteDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the delete default response
-func (o *DeleteDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the delete default response
-func (o *DeleteDefault) WithPayload(payload *models.Error) *DeleteDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the delete default response
-func (o *DeleteDefault) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DeleteDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
