# restapi/operations/create_cluster_responses.go
@@ -1,0 +1,106 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/swag"
+)
+
+// CreateClusterOKCode is the HTTP code returned for type CreateClusterOK
+const CreateClusterOKCode int = 200
+
+/*CreateClusterOK OK indicates that the HTTP request was successful.
+
+swagger:response createClusterOK
+*/
+type CreateClusterOK struct {
+	/*
+
+	 */
+	ResponseCode int64 `json:"ResponseCode"`
+}
+
+// NewCreateClusterOK creates CreateClusterOK with default headers values
+func NewCreateClusterOK() *CreateClusterOK {
+
+	return &CreateClusterOK{}
+}
+
+// WithResponseCode adds the responseCode to the create cluster o k response
+func (o *CreateClusterOK) WithResponseCode(responseCode int64) *CreateClusterOK {
+	o.ResponseCode = responseCode
+	return o
+}
+
+// SetResponseCode sets the responseCode to the create cluster o k response
+func (o *CreateClusterOK) SetResponseCode(responseCode int64) {
+	o.ResponseCode = responseCode
+}
+
+// WriteResponse to the client
+func (o *CreateClusterOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header ResponseCode
+
+	responseCode := swag.FormatInt64(o.ResponseCode)
+	if responseCode != "" {
+		rw.Header().Set("ResponseCode", responseCode)
+	}
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// CreateClusterBadRequestCode is the HTTP code returned for type CreateClusterBadRequest
+const CreateClusterBadRequestCode int = 400
+
+/*CreateClusterBadRequest BadRequest indicates that there was an error in
+the HTTP request.
+
+swagger:response createClusterBadRequest
+*/
+type CreateClusterBadRequest struct {
+	/*
+
+	 */
+	ResponseCode int64 `json:"ResponseCode"`
+}
+
+// NewCreateClusterBadRequest creates CreateClusterBadRequest with default headers values
+func NewCreateClusterBadRequest() *CreateClusterBadRequest {
+
+	return &CreateClusterBadRequest{}
+}
+
+// WithResponseCode adds the responseCode to the create cluster bad request response
+func (o *CreateClusterBadRequest) WithResponseCode(responseCode int64) *CreateClusterBadRequest {
+	o.ResponseCode = responseCode
+	return o
+}
+
+// SetResponseCode sets the responseCode to the create cluster bad request response
+func (o *CreateClusterBadRequest) SetResponseCode(responseCode int64) {
+	o.ResponseCode = responseCode
+}
+
+// WriteResponse to the client
+func (o *CreateClusterBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header ResponseCode
+
+	responseCode := swag.FormatInt64(o.ResponseCode)
+	if responseCode != "" {
+		rw.Header().Set("ResponseCode", responseCode)
+	}
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
