# swagger.yaml
@@ -1,23 +1,32 @@
-host: localhost
-info:
-  contact:
-    email: dgoodwin@redhat.com
-    name: Devan Goodwin
-  description: Standalone Hive SyncSets without reliance on Kube API, CRs, and etcd.
-  license:
-    name: Apache2
-  title: SyncSets API.
-  version: 0.0.1
-paths: {}
-produces:
-- application/json
-schemes:
-- http
-swagger: "2.0"
 basePath: /v1
 consumes:
 - application/json
 definitions:
+  Cluster:
+    properties:
+      kubeconfig:
+        description: Kubeconfig is an admin kubeconfig file for communicating with
+          the cluster.
+        type: string
+        x-go-name: Kubeconfig
+      name:
+        description: Name of the cluster.
+        type: string
+        x-go-name: Name
+      namespace:
+        description: |-
+          Namespace of the cluster. Models the Kubernetes concept of Namespace as OpenShift Hive
+          uses that to allow multiple clusters with the same name, separated by owner.
+        type: string
+        x-go-name: Namespace
+    required:
+    - kubeconfig
+    - name
+    - namespace
+    title: Cluster Cluster is a representation of a Cluster we will reconcile SyncSets
+      to.
+    type: object
+    x-go-package: github.com/dgoodwin/syncsets/models
   cluster:
     properties:
       kubeconfig:
@@ -43,64 +52,64 @@ definitions:
     type: object
     x-go-name: Cluster
     x-go-package: github.com/dgoodwin/syncsets/api
-  error:
-    type: object
-    required:
-      - message
-    properties:
-      code:
-        type: integer
-        format: int64
-      message:
-        type: string
+host: localhost
+info:
+  contact:
+    email: dgoodwin@redhat.com
+    name: Devan Goodwin
+  description: |-
+    Standalone Hive SyncSets without reliance on Kube API, CRs, and etcd.
+    Schemes:
+    http
+    https
+  license:
+    name: Apache2
+  title: SyncSets API.
+  version: 0.0.1
 paths:
   /clusters:
-    get:
-      tags:
-        - clusters
+    post:
+      description: TODO Some test description that should be expanded on someday.
+      operationId: createCluster
       responses:
-        200:
-          description: list the clusters
-          schema:
-            type: array
-            items:
-              $ref: "#/definitions/cluster"
-        default:
-          description: generic error response
-          schema:
-            $ref: "#/definitions/error"
-  /clusters/{name}:
-    parameters:
-      - type: string
-        name: name
-        in: path
-        required: true
-    put:
-      tags:
-        - clusters
-      operationId: update
-      parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: "#/definitions/cluster"
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: "#/definitions/cluster"
-        default:
-          description: error
-          schema:
-            $ref: "#/definitions/error"
-    delete:
-      tags:
-        - clusters
-      operationId: delete
-      responses:
-        204:
-          description: Deleted
-        default:
-          description: error
-          schema:
-            $ref: "#/definitions/error"
+        "200":
+          $ref: '#/responses/OK'
+        "400":
+          $ref: '#/responses/BadRequest'
+      schemes:
+      - http
+      summary: Create a Cluster resource.
+produces:
+- application/json
+responses:
+  BadRequest:
+    description: |-
+      BadRequest indicates that there was an error in
+      the HTTP request.
+    headers:
+      ResponseCode:
+        format: int64
+        type: integer
+  OK:
+    description: OK indicates that the HTTP request was successful.
+    headers:
+      ResponseCode:
+        format: int64
+        type: integer
+  createClusterBadRequest:
+    description: |-
+      CreateClusterBadRequest BadRequest indicates that there was an error in
+      the HTTP request.
+    headers:
+      ResponseCode:
+        format: int64
+        type: integer
+  createClusterOK:
+    description: CreateClusterOK OK indicates that the HTTP request was successful.
+    headers:
+      ResponseCode:
+        format: int64
+        type: integer
+schemes:
+- http
+swagger: "2.0"
